[gd_scene load_steps=8 format=3 uid="uid://dspcly0w0vlea"]

[ext_resource type="Script" uid="uid://djswu6isvycwq" path="res://script/main.gd" id="1_b3xxm"]
[ext_resource type="Texture2D" uid="uid://b64isfhq6xs3y" path="res://skins/Summer8.png" id="2_1nd8o"]
[ext_resource type="PackedScene" uid="uid://ddg6mdaes5cg2" path="res://scenes/rod.tscn" id="3_8ibqf"]
[ext_resource type="AudioStream" uid="uid://dh6ris88lcvfy" path="res://music/Terraria 1.4.4 OST - _Aether_.mp3" id="4_1nd8o"]
[ext_resource type="FontFile" uid="uid://xdxodc064oqe" path="res://skins/rainyhearts.ttf" id="4_8ibqf"]
[ext_resource type="FontFile" uid="uid://cl1kq2l1nkmar" path="res://skins/Early GameBoy.ttf" id="4_g7daa"]
[ext_resource type="PackedScene" uid="uid://cer4336rvre62" path="res://scenes/exit.tscn" id="5_1nd8o"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_b3xxm")

[node name="bg_forest" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(2.125, -146.75)
scale = Vector2(0.560872, 0.80054)
texture = ExtResource("2_1nd8o")

[node name="rod1" parent="." instance=ExtResource("3_8ibqf")]
position = Vector2(-370, -14)

[node name="rod2" parent="." instance=ExtResource("3_8ibqf")]
position = Vector2(-3, -15)
rod_color = Color(0.976471, 1, 0.298039, 1)

[node name="rod3" parent="." instance=ExtResource("3_8ibqf")]
position = Vector2(411, -14)
rod_color = Color(1, 0.0705882, 0.160784, 1)

[node name="Button" type="Button" parent="."]
offset_left = -54.0
offset_top = 270.0
offset_right = 8.0
offset_bottom = 301.0
scale = Vector2(1.66426, 1.66426)
theme_override_colors/font_hover_pressed_color = Color(0.740206, 0.647663, 0, 1)
text = "Solve"

[node name="disks" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -1)

[node name="Title" type="Label" parent="Camera2D"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -324.0
offset_right = 332.0
offset_bottom = -261.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_g7daa")
theme_override_font_sizes/font_size = 50
text = "Tower of Hanoi"

[node name="TargetPeg" type="OptionButton" parent="."]
offset_left = -208.0
offset_top = 286.0
offset_right = -67.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 20
selected = 3
item_count = 4
popup/item_0/text = "Rod 1"
popup/item_0/id = 0
popup/item_1/text = "Rod2"
popup/item_1/id = 1
popup/item_2/text = "Rod3"
popup/item_2/id = 2
popup/item_3/text = "Target Disk"
popup/item_3/id = 3
popup/item_3/disabled = true

[node name="DiskCount" type="SpinBox" parent="."]
offset_left = 64.0
offset_top = 287.0
offset_right = 222.0
offset_bottom = 319.0
min_value = 1.0
max_value = 8.0
value = 3.0
prefix = "Disks"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -394.0
offset_top = -209.0
offset_right = 35.0
offset_bottom = -153.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -232.0
offset_top = 54.0
offset_right = 389.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8ibqf")
theme_override_font_sizes/font_size = 50
text = "YOOHOO"

[node name="hanoi_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1nd8o")
volume_db = 3.0
autoplay = true
parameters/looping = true

[node name="exit_button" parent="." instance=ExtResource("5_1nd8o")]
offset_left = 501.0
offset_top = -313.0
offset_right = 593.0
offset_bottom = -282.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
